名前を変更

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <body>
     <div id="container">
       <div class="info">
-        <div class="name">山田一郎</div>
+        <div class="name">chiko
+        </div>
         <div class="txt">
-          ハローワールド！<br>
-          これが初めてのページです。このページは練習用のページですのでポートフォリオとは関係ありません。<br>
-          私がよく見るサイトは<a href="http://youtube.com" target='_blank'>YouTube</a>です。
+          meronmeronwatermeron<br>
+          I enjoy developing!I have good time freind,familiy.<br>
+          The site I often see is<a href="http://youtube.com" target='_blank'>YouTube</a>です。
         </div>
       </div>
       <div class="btns">
